--- a/src/section/Services/Service.css
+++ b/src/section/Services/Service.css
@@ -62,21 +62,50 @@
 }
 
 .services-button {
-  background: linear-gradient(to right, #10b981, #059669);
-  color: white;
-  border: none;
-  padding: 0.75rem 2rem;
-  font-size: 1rem;
-  border-radius: 999px;
-  cursor: pointer;
-  font-weight: 600;
-  transition: all 0.3s ease;
+  padding: 15px 25px;
+  border: 2px solid #10b981;
+ border-radius: 999px;
+  color: #065f46;
+ z-index: 1;
+ position: relative;
+ font-weight: 700;
+ background-color: #ffffff;
+ font-size: 17px;
+ -webkit-box-shadow: 4px 8px 19px -3px rgba(0,0,0,0.27);
+ box-shadow: 4px 8px 19px -3px rgba(0,0,0,0.27);
+ transition: all 250ms;
+ overflow: hidden;
+  
 }
 
+.services-button::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 0;
+  border-radius: 15px;
+   background: linear-gradient(to right, #10b981, #059669);
+  z-index: -1;
+  -webkit-box-shadow: 4px 8px 19px -3px rgba(0,0,0,0.27);
+  box-shadow: 4px 8px 19px -3px rgba(0,0,0,0.27);
+  transition: all 250ms;
+  color: #e8e8e8;
+
+}
+.services-button:hover {
+  color: #e8e8e8;
+ }
+ 
+ .services-button:hover::before {
+  width: 100%;  
+
+ }
 .services-button:hover {
   background: transparent;
   border: 2px solid #10b981;
-  color: #065f46;
+  color: #ffffff;
 }
 
 .services-grid {
